@@ -1,6 +1,9 @@
 Summary of important user-visible changes for version 4.2:
 ---------------------------------------------------------
 
+ ** mkfifo now interprets the MODE argument as an octal, not decimal, integer.
+    This is consistent with the equivalent shell command. 
+
  ** Other new functions added in 4.2:
 
       psi
